fixed no-wrap on top navi

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -67,6 +67,7 @@ body {
   text-align: center;
   border-left: 1px solid rgba(255,255,255,.75);
   border-right: 1px solid rgba(0,0,0,.1);
+  white-space: nowrap;
 }
 
 .navbar .nav li:first-child a {
